--- a/website/public/index.html
+++ b/website/public/index.html
@@ -7,11 +7,22 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="icon" href="<%= BASE_URL %>ico.png">
   <title>Ruben Duiveman | Product & UX</title>
+
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-44368134-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    window.gtag = function () { dataLayer.push(arguments); }
+    window.gtag('js', new Date());
+
+    // track initial page
+    window.gtag("config", "UA-44368134-1");
+  </script>
+
 </head>
 
 <body>
   <noscript>
-    <strong>We're sorry, but this website doesn't work properly without JavaScript enabled. Please enable it to
+    <strong>I'm sorry, but this website doesn't work properly without JavaScript enabled. Please enable it to
       continue.</strong>
   </noscript>
   <div id="app"></div>
